css/components/main-carousel.css
.main-carousel {
    display: flex;
    justify-content: space-between;
    position: relative;
    padding-left: 85px;
    padding-right: 85px;
}

.main-carousel::after {
    content: '';
    position: absolute;
    left: 50px;
    top: 38px;
    display: block;
    height: 6px;
    width: calc(100% - 100px);
    background-color: #000;
}

.main-carousel::before {
    content: '';
    position: absolute;
    left: 0;
    top: 38px;
    display: block;
    width: calc(100% - 6px);
    border: 3px dashed #000;
}

.main-carousel .button-arrow {
    position: absolute;
    bottom: 70px;
    transform: translateY(50%);
}

.main-carousel .button-arrow.-left {
    left: 15px;
}

.main-carousel .button-arrow.-right {
    right: 15px;
}

